--- a/index.html
+++ b/index.html
@@ -650,9 +650,9 @@
 		       			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						<div class="col-md-5">
 							<div class="login-box d-grid py-5 gap-3 px-3">
-								<button class="btn btn-fb"><img src="../img/icon-fb.svg"> 使用Facebook</button>
-								<button class="btn btn-line"><img src="../img/icon-line.svg"> 使用Line</button>
-								<button class="btn btn-google"><img src="../img/icon-google.svg"> 使用Google</button>
+								<button class="btn btn-fb"><img src="../img/icon-fb.png"> 使用Facebook</button>
+								<button class="btn btn-line"><img src="../img/icon-line.png"> 使用Line</button>
+								<button class="btn btn-google"><img src="../img/icon-google.png"> 使用Google</button>
 								<div class="divider">
 									<p class="text-secondary"><small>或</small></p>
 								</div>
