--- a/index.html
+++ b/index.html
@@ -562,9 +562,9 @@
 							<div class="col-md-5">
 								<div class="login-box d-grid py-5 gap-3 px-3">
 									<h5>會員登入</h5>
-									<button class="btn btn-fb"><img src="../img/icon-fb.svg"> 使用Facebook</button>
-									<button class="btn btn-line"><img src="../img/icon-line.svg"> 使用Line</button>
-									<button class="btn btn-google"><img src="../img/icon-google.svg"> 使用Google</button>
+									<button class="btn btn-fb"><img src="img/icon-fb.svg"> 使用Facebook</button>
+									<button class="btn btn-line"><img src="img/icon-line.svg"> 使用Line</button>
+									<button class="btn btn-google"><img src="img/icon-google.svg"> 使用Google</button>
 									<div class="divider">
 										<p class="text-secondary"><small>或</small></p>
 									</div>
@@ -610,9 +610,9 @@
 						<div class="col-md-5">
 							<div class="login-box d-grid py-5 gap-3 px-3">
 								<h5>會員登入</h5>
-								<button class="btn btn-fb"><img src="../img/icon-fb.svg"> 使用Facebook</button>
-								<button class="btn btn-line"><img src="../img/icon-line.svg"> 使用Line</button>
-								<button class="btn btn-google"><img src="../img/icon-google.svg"> 使用Google</button>
+								<button class="btn btn-fb"><img src="img/icon-fb.svg"> 使用Facebook</button>
+								<button class="btn btn-line"><img src="img/icon-line.svg"> 使用Line</button>
+								<button class="btn btn-google"><img src="img/icon-google.svg"> 使用Google</button>
 								<div class="divider">
 									<p class="text-secondary"><small>或</small></p>
 								</div>
@@ -650,13 +650,13 @@
 		       			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						<div class="col-md-5">
 							<div class="login-box d-grid py-5 gap-3 px-3">
-								<button class="btn btn-fb"><img src="../img/icon-fb.png"> 使用Facebook</button>
-								<button class="btn btn-line"><img src="../img/icon-line.png"> 使用Line</button>
-								<button class="btn btn-google"><img src="../img/icon-google.png"> 使用Google</button>
+								<button class="btn btn-fb"><img src="img/icon-fb.svg"> 使用Facebook</button>
+								<button class="btn btn-line"><img src="img/icon-line.svg"> 使用Line</button>
+								<button class="btn btn-google"><img src="img/icon-google.svg"> 使用Google</button>
 								<div class="divider">
 									<p class="text-secondary"><small>或</small></p>
 								</div>
-								<button class="btn btn-login" data-bs-target="#signupMailToggle" data-bs-toggle="modal" data-bs-dismiss="modal">使用Eamil</button>
+								<button class="btn btn-login" data-bs-target="#signupailToggle" data-bs-toggle="modal" data-bs-dismiss="modal">使用Eamil</button>
 								<p>繼續進行下一步驟，及代表您同意我們的<b>服務條款</b>、<b>隱私權政策</b>及<b>免責聲明</b></p>
 								<div class="border-top border-secodary mt-2 py-2">
 									<p>已經是旅遊咖嗎？
@@ -722,8 +722,8 @@
 	<!-- modal end -->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 
