--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 								<div class="divider">
 									<p class="text-secondary"><small>或</small></p>
 								</div>
-								<button class="btn btn-login" data-bs-target="#signupＭailToggle" data-bs-toggle="modal" data-bs-dismiss="modal">使用Eamil</button>
+								<button class="btn btn-login" data-bs-target="#signupMailToggle" data-bs-toggle="modal" data-bs-dismiss="modal">使用Eamil</button>
 								<p>繼續進行下一步驟，及代表您同意我們的<b>服務條款</b>、<b>隱私權政策</b>及<b>免責聲明</b></p>
 								<div class="border-top border-secodary mt-2 py-2">
 									<p>已經是旅遊咖嗎？
