--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 									<div class="d-flex justify-content-end">
 										<a class="link-hyt" data-bs-target="#forgetPasswordToggle" data-bs-toggle="modal" data-bs-dismiss="modal">忘記密碼?</a>
 									</div>
-									<button class="btn btn-login">登入</button>
+									<a href="member.html" class="btn btn-login">登入</a>
 									<div class="border-top border-secodary mt-2 py-2">
 										<p>還不是旅遊咖嗎？
 											<a class="link-hyt" data-bs-target="#signupSocialToggle" data-bs-toggle="modal" data-bs-dismiss="modal">立即註冊</a>
